# newsletter-bot

./: .gitignore  Cargo.toml  README.md  updates.md
.github/workflows/: ci.yml
src/: ai_summarizer.rs  main.rs
